chore: update contributors

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "grunt-auto-release": "~0.0.2"
   },
   "contributors": [
-    "Santthosh Selvadurai <santthosh.selvadurai@lithium.com>"
+    "Santthosh <santthosh@users.noreply.github.com>"
   ]
 }
