--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "grunt-auto-release": "~0.0.2"
   },
   "contributors": [
+    "santthosh <santthosh@gmail.com>",
     "Santthosh <santthosh@users.noreply.github.com>",
     "Frank <pussinboots666@googlemail.com>",
-    "lucianobargmann <luciano.bargmann@gmail.com>",
-    "santthosh <santthosh@gmail.com>"
+    "lucianobargmann <luciano.bargmann@gmail.com>"
   ]
 }
